AX: Searching mechanism is too slow when finding the element. https://bugs.webkit.org/show_bug.cgi?id=72523

Reviewed by Beth Dakin.

This makes the element searching mechanism much faster. Previously, searching literally went
through every element, looking for the start element before "starting" the search.

Now we only go through the elements that need to be searched. This is done by going up the
start object parent chain. At each level, a DFS is done. As we go up the parent chain,
only the elements before/after the current element are examined.

* accessibility/AccessibilityObject.cpp:
(WebCore::appendChildrenToArray):
(WebCore::AccessibilityObject::findMatchingObjects):



Canonical link: https://commits.webkit.org/90042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101570 268f45cc-cd09-0410-ab3c-d52691b4dbfc